added comments and a print message

--- a/KNN_breast_cancer.ipynb
+++ b/KNN_breast_cancer.ipynb
@@ -34,11 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(cancer_data.DESCR)"
+    "# print(cancer_data.DESCR)\n",
+    "# print(cancer_data.DESCR)\n",
+    "# print(get me some delay time and bla bla bla )\n",
+    "# make no effect for bro..."
    ]
   },
   {
@@ -167,15 +170,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello everyone\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello everyone\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ml_sklearn] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ml_sklearn-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -187,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
