--- a/Decision_tree_breast_cancer.ipynb
+++ b/Decision_tree_breast_cancer.ipynb
@@ -35,11 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(cancer_data.DESCR)"
+    "# print(cancer_data.DESCR)\n",
+    "# print(get me some delay time and bla bla bla )\n",
+    "# make no effect for bro..."
    ]
   },
   {
