added a sum of 2 numbers

--- a/KNN_breast_cancer.ipynb
+++ b/KNN_breast_cancer.ipynb
@@ -168,19 +168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello everyone\n"
+      "hello everyone\n",
+      "The sum of 10 and 5 is 15\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello everyone\")"
+    "print(\"hello everyone\")\n",
+    "num1 = 10\n",
+    "num2 = 5\n",
+    "print(f\"The sum of {num1} and {num2} is {num1 + num2}\")"
    ]
   }
  ],
